[package]
name = "examples"
version = "1.0.0"
edition = "2021"

[dependencies]
intasend = { path = "../intasend", features = ["client"] }

dotenvy = "0.15.7"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.79"
rust_decimal = "1.34.2"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
