[package]
name = "intasend"
version = "0.2.0"
edition = "2021"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENSE.md"
]
homepage = "https://github.com/MikeTeddyOmondi/intasend-rs/intasend"
description = "A Rust SDK for the Intasend Payment Gateway"
repository = "https://github.com/MikeTeddyOmondi/intasend-rs"
keywords = [
	"sdk",
  "intasend",
  "payment-gateway",
]
categories = ["sdk", "payment_gateway"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
futures = "0.3.30"
reqwest = { version = "0.11.23", features = ["json"] }
rust_decimal = "1.34.2"
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.63"
tokio = { version = "1.35.1", features = ["full"] }


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[features]
default = ["client", "server"]
client = []
server = []
