# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "intasend"
version = "0.3.1-beta"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE.md"]
homepage = "https://github.com/MikeTeddyOmondi/intasend-rs/intasend"
description = "A Rust SDK for the Intasend Payment Gateway"
repository = "https://github.com/MikeTeddyOmondi/intasend-rs"
keywords = ["sdk", "intasend", "payment-gateway"]
categories = ["finance", "web-programming"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.79"
futures = "0.3.30"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
rust_decimal = "1.34.2"
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "2.0.12"
tokio = { version = "1.35.1", features = [
	"rt-multi-thread",
	"macros",
	"time",
	"net",
	"io-util",
] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
dotenvy = "0.15.7"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[features]
default = ["full"]
client = []
server = []
full = ["client", "server"]
